--- a/src/components/Results.module.scss
+++ b/src/components/Results.module.scss
@@ -1,6 +1,51 @@
 .container {
-  background-color: olivedrab;
-  color: black;
+  background-color: #2e3747;
   flex: 1;
+  flex-direction: column;
   height: 100%;
+}
+
+.table {
+  height: 100%;
+  width: 90%;
+  margin: 10px;
+}
+
+.header {
+  font-size: 20px;
+  color: white;
+}
+
+.rows {
+  font-size: 16px;
+  color: white;
+}
+
+.testResult {
+  display: flex;
+  flex: 1;
+}
+
+.testName {
+  flex: 2;
+  text-align: left;
+}
+
+.testStatus {
+  flex: 1;
+  text-align: right;
+
+  &Loading {
+    @extend .testStatus;
+    animation: spin 4s infinite linear;
+  }
+}
+
+@keyframes spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
