--- a/src/components/Tests.module.scss
+++ b/src/components/Tests.module.scss
@@ -1,6 +1,22 @@
 .container {
-  background-color: navy;
-  color: white;
+  background-color: #3e4a5f;
   flex: 2;
+  flex-direction: column;
   height: 100%;
+}
+
+.table {
+  height: 100%;
+  width: 90%;
+  margin: 10px;
+}
+
+.header {
+  font-size: 20px;
+  color: white;
+}
+
+.rows {
+  font-size: 16px;
+  color: white;
 }
