--- a/src/components/Tests.module.scss
+++ b/src/components/Tests.module.scss
@@ -6,7 +6,7 @@
 }
 
 .table {
-  height: 100%;
+  height: 80%;
   width: 90%;
   margin: 10px;
 }
@@ -19,4 +19,9 @@
 .rows {
   font-size: 16px;
   color: white;
+}
+
+.button {
+  font-weight: bold;
+  background-color: rgba(black, 0.1);
 }
