--- a/src/components/Tests.module.scss
+++ b/src/components/Tests.module.scss
@@ -25,3 +25,15 @@
   font-weight: bold;
   background-color: rgba(black, 0.1);
 }
+
+.modal {
+  background-color: #e0e0e0;
+  box-shadow: 0 0 20px black;
+  left: 50%;
+  padding: 16px;
+  position: absolute;
+  text-align: center;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  width: 400;
+}
