Adding cropped images to view test

--- a/src/components/TestModal.module.scss
+++ b/src/components/TestModal.module.scss
@@ -28,3 +28,12 @@
         }
     }
 }
+
+.imagesContainer {
+    display: flex;
+    flex-direction: column;
+
+    & img {
+        align-self: center;
+    }
+}
